--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "react-social-media-embed": "^2.4.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^8.0.7",
     "web-vitals": "^2.1.0"
   },
