--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,9 +17,11 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "react-slick": "^0.29.0",
     "react-social-media-embed": "^2.4.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "swiper": "^8.0.7",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -26,12 +29,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
