--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
